<resources>
    <string name="app_name">掌上体检</string>

    <string name="tab_home">首页</string>
    <string name="daily_news">每日资讯</string>
    <string name="consult_loading">健康咨询</string>
    <string name="tab_mine">我的</string>
    <string name="tab_consult">咨询</string>
    <string name="splash_statent">深度掌握全家健康信息\n实时关注家人健康动态</string>
    <string name="login_statent">注册登录即表示您同意我们的[掌上体检用户许可协议]</string>
    <string name="system_exit">再按一次退出</string>
    <string name="user_info">个人资料</string>
    <string name="system_set">系统设置</string>
    <string name="report_example">报告示例</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_current_phone">当前绑定手机号</string>
    <string name="hint_input_authcode">请输入验证码</string>
    <string name="hint_input_report_name">请输入体检报告真实姓名</string>
    <string name="hint_advice">请留下你的宝贵的意见，我们将不断完善...</string>
    <string name="error_input_phone">请输入正确的手机号码！</string>
    <string name="get_authcode">获取验证码</string>
    <string name="reget_authcode">秒后重新获取</string>
    <string name="cancel">取消</string>
    <string name="login">登  录</string>
    <string name="logout">退出登录</string>
    <string name="confirm">确认</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="bind_phone">绑定手机</string>
    <string name="get_report">获取体检报告</string>
    <string name="consult_grade">服务评价</string>
    <string name="user_grade">客户满意度评价</string>
    <string name="user_grade1">服务态度好</string>
    <string name="user_grade2">专业知识强</string>
    <string name="user_grade3">回复很及时</string>
    <string name="user_grade4">沟通能力强</string>
    <string name="hint_grade">您对此次服务的总评价</string>
    <string name="commit_grade">提交评价</string>
    <string name="report">体检报告</string>
    <string name="add_report">添加报告</string>
    <string name="health_consult">健康咨询</string>
    <string name="auth_0">未认证</string>
    <string name="auth_1">已认证</string>

    <string name="consult_warning">健管师的回复内容仅作为建议，具体诊疗请前往医院进行</string>
    <string name="workTime">工作时间：工作日9:00-17:30，节假日回复时间：72小时内，请您耐心等待，感谢您的咨询！</string>
    <string name="scale_down_show_behavior">com.ihaozuo.plamexam.view.consult.behavior.ScaleDownShowBehavior</string>
    <string name="scale_up_show_behavior">com.ihaozuo.plamexam.view.consult.behavior.ScaleUpShowBehavior</string>
    <string name="swipe_dismiss_behavior">android.support.design.widget.SwipeDismissBehavior</string>
    <string name="URL_default">http://article.h5.ihaozhuo.com/1475216088834.html</string>

    <string name="phone">手机号码</string>
    <string name="photo">头像</string>
    <string name="name">姓名</string>
    <string name="user_auth">实名认证</string>
    <string name="bind_qq">绑定Q Q</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="bind_sina">绑定微博</string>
    <string name="about_us">关于我们</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="disclaimer">免责声明</string>
    <string name="clear_cache">清除缓存</string>
    <string name="bind">绑定</string>
    <string name="unbind">未绑定</string>
    <string name="binded">已绑定</string>
    <string name="no_data">暂无数据</string>


    <!--语音听写APP_ID-->
    <string name="xunfei_app_id">5804a7be</string>
    <string name="JPush_app_id">750c95297adeffc03b5439cb</string>
    <string name="UMeng_app_id">57be474667e58ef053000087</string>

    <string name="QQ_APP_ID">1105699103</string>
    <string name="QQ_APP_KEY">W0grAATJYfxpI7NC</string>
    <string name="WEIXIN_APP_ID">wx35e5655ba6776765</string>
    <string name="WEIXIN_APP_KEY">a01938c93230a27b338cf5bece21adea</string>
    <string name="SINA_APP_ID">436196584</string>
    <string name="SINA_APP_KEY">e7e5b817ca06547ef20f3a9c5bd4f650</string>
    <string name="SINA_OAUTH_URL">http://sns.whalecloud.com/sina2/callback</string>

    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <string name="gray_f8">#FFF8F8F8</string>
    <string name="red_report_error">#FFF25353</string>
    <string name="blue_theme">#FF309BF2</string>
    <string name="gray_33">#FF333333</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="androidColorA">#FF33B5E5</string>
    <string name="androidColorB">#FFAA66CC</string>
    <string name="androidColorC">#FF99CC00</string>
    <string name="androidColorD">#FFFFBB33</string>
    <string name="androidColorE">#FFFF4444</string>
    <string name="title_activity_consult1">ConsultActivity1</string>
    <string name="title_activity_t">Sign in</string>


    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment" translatable="false">评论</string>
    <string name="umeng_socialize_comment_detail" translatable="false">评论详情</string>
    <string name="umeng_socialize_back" translatable="false">返回</string>
    <string name="umeng_socialize_near_At" translatable="false">最近\@的好友</string>
    <string name="umeng_socialize_friends" translatable="false">关注的好友</string>
    <string name="umeng_socialize_send" translatable="false">发布</string>
    <string name="umeng_socialize_tip_blacklist" translatable="false">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed" translatable="false">登录失败&#8230;</string>
    <string name="umeng_socialize_msg_sec" translatable="false">秒前</string>
    <string name="umeng_socialize_msg_min" translatable="false">分钟前</string>
    <string name="umeng_socialize_msg_hor" translatable="false">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide" translatable="false">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform" translatable="false">登录帐号</string>

    <dimen name="alphabet_size">12dip</dimen>
    <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
    <dimen name="umeng_socialize_pad_window_width">580dip</dimen>

    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台，
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <!-- 平台名称 -->
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="umeng_socialize_text_yixin_key">易信</string>
    <string name="umeng_socialize_text_yixincircle_key">易信朋友圈</string>

    <string name="umeng_socialize_text_laiwangdynamic_key">来往动态</string>
    <string name="umeng_socialize_text_evernote_key">印象笔记</string>
    <string name="umeng_socialize_text_ydnote_key">有道云笔记</string>
    <string name="umeng_socialize_text_facebook_key">facebook</string>
    <string name="umeng_socialize_text_twitter_key">twitter</string>
    <string name="umeng_socialize_text_instagram_key">instagram</string>
    <string name="umeng_socialize_text_pinterest_key">pinterest</string>
    <string name="umeng_socialize_text_pocket_key">pocket</string>
    <string name="umeng_socialize_text_linkedin_key">Linkedin</string>
    <string name="umeng_socialize_text_foursquare_key">Foursquare</string>
    <string name="umeng_socialize_text_whatsapp_key">WhatsApp</string>
    <string name="umeng_socialize_text_line_key">LINE</string>
    <string name="umeng_socialize_text_flickr_key">Flickr</string>
    <string name="umeng_socialize_text_tumblr_key">Tumblr</string>
    <string name="umeng_socialize_text_alipay_key">支付宝</string>
    <string name="umeng_socialize_text_kakao_key">Kakao Talk</string>
    <string name="umeng_socialize_text_googleplus_key">GooglePlus</string>
    <string name="umeng_socialize_text_more_key">更多</string>

</resources>
