<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2"
    android:orientation="vertical"
    tools:context=".view.mine.UserInfoFragment">

    <include layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_9dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/userPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/userinfo_padding_8dp"
                android:paddingLeft="@dimen/userinfo_padding_12dp"
                android:paddingRight="@dimen/userinfo_padding_12dp"
                android:paddingTop="@dimen/userinfo_padding_8dp">

                <TextView
                    style="@style/userinfo_label"
                    android:text="@string/photo" />


                <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/CPhoto"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:layout_alignParentRight="true"
                    fresco:placeholderImage="@drawable/ic_user_small"
                    fresco:roundAsCircle="true" />
            </RelativeLayout>

            <include layout="@layout/divider_dd_margin" />


            <RelativeLayout
                android:id="@+id/layoutUserName"
                style="@style/userinfo_layout"
                android:background="@color/white">

                <TextView
                    style="@style/userinfo_label"
                    android:text="@string/name" />


                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/userinfo_label_content"
                    tools:text="张三" />
            </RelativeLayout>

            <include layout="@layout/divider_dd_margin" />

            <RelativeLayout
                android:id="@+id/layoutUserPhone"
                style="@style/userinfo_layout"
                android:background="@color/white">

                <TextView
                    style="@style/userinfo_label"
                    android:text="@string/phone" />


                <TextView
                    android:id="@+id/tvUserPhone"
                    style="@style/userinfo_label_content"
                    tools:text="13888888888" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="@dimen/padding_9dp"
                android:id="@+id/layoutUserAuth"
                style="@style/userinfo_layout">

                <TextView
                    style="@style/userinfo_label"
                    android:text="@string/user_auth" />


                <TextView
                    android:id="@+id/tvAuthState"
                    style="@style/userinfo_label_content"
                    android:text="@string/auth_0" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
