<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2"
    android:orientation="vertical">

    <include layout="@layout/actionbar_mine" />

    <LinearLayout
        android:id="@+id/layoutUserInfo"
        style="@style/hlayout_h44"
        android:layout_marginTop="@dimen/padding_9dp">

        <ImageView
            style="@style/img_mine"
            android:src="@drawable/ic_user_info" />

        <TextView
            style="@style/txt_16sp_gray66"
            android:text="@string/user_info" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include layout="@layout/next_mine_right_lauout" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/white"
        android:paddingLeft="51dp"
        android:src="@color/divider_dd" />

    <LinearLayout
        android:id="@+id/layoutSysSet"
        style="@style/hlayout_h44">

        <ImageView
            style="@style/img_mine"
            android:src="@drawable/ic_system_set" />

        <TextView
            style="@style/txt_16sp_gray66"
            android:text="@string/system_set" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include layout="@layout/next_mine_right_lauout" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/white"
        android:paddingLeft="51dp"
        android:src="@color/divider_dd" />

    <LinearLayout
        android:id="@+id/layoutReportEx"
        android:visibility="gone"
        style="@style/hlayout_h44">

        <ImageView
            style="@style/img_mine"
            android:src="@drawable/ic_report_ex" />

        <TextView
            style="@style/txt_16sp_gray66"
            android:text="@string/report_example" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include layout="@layout/next_mine_right_lauout" />
    </LinearLayout>


</LinearLayout>
